# vello

./: AGENTS.md  Cargo.toml
.github/workflows/: ci.yml  codspeed.yml  web-demo.yml
examples/with_winit/: Cargo.toml
glifo/src/: glyph.rs
sparse_strips/vello_bench/: Cargo.toml
sparse_strips/vello_bench/benches/: main.rs  scenes.rs
sparse_strips/vello_bench/src/: strip.rs
sparse_strips/vello_common/src/: coarse.rs  strip.rs
sparse_strips/vello_cpu/: README.md
sparse_strips/vello_cpu/examples/wasm_cpu/: Cargo.toml
sparse_strips/vello_example_scenes/src/: lib.rs  mixed.rs
sparse_strips/vello_hybrid/: Cargo.toml  README.md
sparse_strips/vello_hybrid/examples/native_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/scenes/src/: image.rs
sparse_strips/vello_hybrid/examples/wgpu_webgl/: Cargo.toml
sparse_strips/vello_hybrid/examples/winit/src/: main.rs
sparse_strips/vello_hybrid/shaders/: sparse_strip_renderer.wgsl
sparse_strips/vello_hybrid/src/: lib.rs  render.rs  scene.rs
sparse_strips/vello_hybrid/src/render/: common.rs
sparse_strips/vello_sparse_tests/tests/: basic.rs  filter.rs
